Interpreter/build/gpp_parser.output
Grammar

    0 $accept: START $end

    1 START: INPUT

    2 INPUT: EXPLIST
    3      | /* empty */

    4 EXPLIST: EXPLIST EXP
    5        | EXP

    6 EXP: IDENTIFIER
    7    | VALUEF
    8    | ARITHMETIC_EXP
    9    | LOGICAL_EXP
   10    | FCALL
   11    | FUNCTION_DEF
   12    | LIST
   13    | ASSIGNMENT
   14    | CONTROL_STATEMENT
   15    | DISPLAY
   16    | EXIT
   17    | LOAD

   18 ARITHMETIC_EXP: OP_OP OP_PLUS EXP EXP OP_CP
   19               | OP_OP OP_MINUS EXP EXP OP_CP
   20               | OP_OP OP_MULT EXP EXP OP_CP
   21               | OP_OP OP_DIV EXP EXP OP_CP

   22 LOGICAL_EXP: KW_TRUE
   23            | KW_FALSE
   24            | OP_OP KW_AND EXP EXP OP_CP
   25            | OP_OP KW_OR EXP EXP OP_CP
   26            | OP_OP KW_NOT EXP OP_CP
   27            | OP_OP KW_EQUAL EXP EXP OP_CP
   28            | OP_OP KW_LESS EXP EXP OP_CP

   29 ASSIGNMENT: OP_OP KW_SET IDENTIFIER EXP OP_CP

   30 FCALL: OP_OP IDENTIFIER EXP OP_CP

   31 FUNCTION_DEF: OP_OP KW_DEFFUN IDENTIFIER OP_OP IDENTIFIER OP_CP EXP OP_CP

   32 CONTROL_STATEMENT: OP_OP KW_IF EXP EXP OP_CP
   33                  | OP_OP KW_IF EXP EXP EXP OP_CP
   34                  | OP_OP KW_WHILE OP_OP EXP OP_CP EXP OP_CP
   35                  | OP_OP KW_FOR OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP

   36 DISPLAY: OP_OP KW_DISP EXPLIST OP_CP

   37 EXIT: OP_OP KW_EXIT OP_CP

   38 LIST: KW_NIL
   39     | OP_OP KW_LIST OP_CP
   40     | OP_OP KW_LIST OP_OP VALUES OP_CP OP_CP
   41     | OP_OP KW_APPEND LIST EXP OP_CP
   42     | OP_OP KW_CONCAT LIST LIST OP_CP

   43 VALUES: VALUES OP_COMMA VALUEF
   44       | VALUEF

   45 LOAD: OP_OP KW_LOAD IDENTIFIER OP_CP


Terminals, with rules where they appear

$end (0) 0
error (256)
VALUEF (258) 7 43 44
IDENTIFIER (259) 6 29 30 31 35 45
OP_PLUS (260) 18
OP_MINUS (261) 19
OP_MULT (262) 20
OP_DIV (263) 21
OP_OP (264) 18 19 20 21 24 25 26 27 28 29 30 31 32 33 34 35 36 37 39
    40 41 42 45
OP_CP (265) 18 19 20 21 24 25 26 27 28 29 30 31 32 33 34 35 36 37 39
    40 41 42 45
OP_COMMA (266) 43
KW_SET (267) 29
KW_DEFFUN (268) 31
KW_IF (269) 32 33
KW_WHILE (270) 34
KW_FOR (271) 35
KW_LIST (272) 39 40
KW_EXIT (273) 37
KW_APPEND (274) 41
KW_CONCAT (275) 42
KW_DISP (276) 36
KW_LOAD (277) 45
KW_TRUE (278) 22
KW_FALSE (279) 23
KW_AND (280) 24
KW_OR (281) 25
KW_NOT (282) 26
KW_EQUAL (283) 27
KW_LESS (284) 28
KW_NIL (285) 38


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
START (32)
    on left: 1, on right: 0
INPUT (33)
    on left: 2 3, on right: 1
EXPLIST (34)
    on left: 4 5, on right: 2 4 35 36
EXP (35)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17, on right: 4 5 18 19 20
    21 24 25 26 27 28 29 30 31 32 33 34 35 41
ARITHMETIC_EXP (36)
    on left: 18 19 20 21, on right: 8
LOGICAL_EXP (37)
    on left: 22 23 24 25 26 27 28, on right: 9
ASSIGNMENT (38)
    on left: 29, on right: 13
FCALL (39)
    on left: 30, on right: 10
FUNCTION_DEF (40)
    on left: 31, on right: 11
CONTROL_STATEMENT (41)
    on left: 32 33 34 35, on right: 14
DISPLAY (42)
    on left: 36, on right: 15
EXIT (43)
    on left: 37, on right: 16
LIST (44)
    on left: 38 39 40 41 42, on right: 12 41 42
VALUES (45)
    on left: 43 44, on right: 40 43
LOAD (46)
    on left: 45, on right: 17


state 0

    0 $accept: . START $end

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    $default  reduce using rule 3 (INPUT)

    START              go to state 7
    INPUT              go to state 8
    EXPLIST            go to state 9
    EXP                go to state 10
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 1

    7 EXP: VALUEF .

    $default  reduce using rule 7 (EXP)


state 2

    6 EXP: IDENTIFIER .

    $default  reduce using rule 6 (EXP)


state 3

   18 ARITHMETIC_EXP: OP_OP . OP_PLUS EXP EXP OP_CP
   19               | OP_OP . OP_MINUS EXP EXP OP_CP
   20               | OP_OP . OP_MULT EXP EXP OP_CP
   21               | OP_OP . OP_DIV EXP EXP OP_CP
   24 LOGICAL_EXP: OP_OP . KW_AND EXP EXP OP_CP
   25            | OP_OP . KW_OR EXP EXP OP_CP
   26            | OP_OP . KW_NOT EXP OP_CP
   27            | OP_OP . KW_EQUAL EXP EXP OP_CP
   28            | OP_OP . KW_LESS EXP EXP OP_CP
   29 ASSIGNMENT: OP_OP . KW_SET IDENTIFIER EXP OP_CP
   30 FCALL: OP_OP . IDENTIFIER EXP OP_CP
   31 FUNCTION_DEF: OP_OP . KW_DEFFUN IDENTIFIER OP_OP IDENTIFIER OP_CP EXP OP_CP
   32 CONTROL_STATEMENT: OP_OP . KW_IF EXP EXP OP_CP
   33                  | OP_OP . KW_IF EXP EXP EXP OP_CP
   34                  | OP_OP . KW_WHILE OP_OP EXP OP_CP EXP OP_CP
   35                  | OP_OP . KW_FOR OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP
   36 DISPLAY: OP_OP . KW_DISP EXPLIST OP_CP
   37 EXIT: OP_OP . KW_EXIT OP_CP
   39 LIST: OP_OP . KW_LIST OP_CP
   40     | OP_OP . KW_LIST OP_OP VALUES OP_CP OP_CP
   41     | OP_OP . KW_APPEND LIST EXP OP_CP
   42     | OP_OP . KW_CONCAT LIST LIST OP_CP
   45 LOAD: OP_OP . KW_LOAD IDENTIFIER OP_CP

    IDENTIFIER  shift, and go to state 21
    OP_PLUS     shift, and go to state 22
    OP_MINUS    shift, and go to state 23
    OP_MULT     shift, and go to state 24
    OP_DIV      shift, and go to state 25
    KW_SET      shift, and go to state 26
    KW_DEFFUN   shift, and go to state 27
    KW_IF       shift, and go to state 28
    KW_WHILE    shift, and go to state 29
    KW_FOR      shift, and go to state 30
    KW_LIST     shift, and go to state 31
    KW_EXIT     shift, and go to state 32
    KW_APPEND   shift, and go to state 33
    KW_CONCAT   shift, and go to state 34
    KW_DISP     shift, and go to state 35
    KW_LOAD     shift, and go to state 36
    KW_AND      shift, and go to state 37
    KW_OR       shift, and go to state 38
    KW_NOT      shift, and go to state 39
    KW_EQUAL    shift, and go to state 40
    KW_LESS     shift, and go to state 41


state 4

   22 LOGICAL_EXP: KW_TRUE .

    $default  reduce using rule 22 (LOGICAL_EXP)


state 5

   23 LOGICAL_EXP: KW_FALSE .

    $default  reduce using rule 23 (LOGICAL_EXP)


state 6

   38 LIST: KW_NIL .

    $default  reduce using rule 38 (LIST)


state 7

    0 $accept: START . $end

    $end  shift, and go to state 42


state 8

    1 START: INPUT .

    $default  reduce using rule 1 (START)


state 9

    2 INPUT: EXPLIST .
    4 EXPLIST: EXPLIST . EXP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    $default  reduce using rule 2 (INPUT)

    EXP                go to state 43
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 10

    5 EXPLIST: EXP .

    $default  reduce using rule 5 (EXPLIST)


state 11

    8 EXP: ARITHMETIC_EXP .

    $default  reduce using rule 8 (EXP)


state 12

    9 EXP: LOGICAL_EXP .

    $default  reduce using rule 9 (EXP)


state 13

   13 EXP: ASSIGNMENT .

    $default  reduce using rule 13 (EXP)


state 14

   10 EXP: FCALL .

    $default  reduce using rule 10 (EXP)


state 15

   11 EXP: FUNCTION_DEF .

    $default  reduce using rule 11 (EXP)


state 16

   14 EXP: CONTROL_STATEMENT .

    $default  reduce using rule 14 (EXP)


state 17

   15 EXP: DISPLAY .

    $default  reduce using rule 15 (EXP)


state 18

   16 EXP: EXIT .

    $default  reduce using rule 16 (EXP)


state 19

   12 EXP: LIST .

    $default  reduce using rule 12 (EXP)


state 20

   17 EXP: LOAD .

    $default  reduce using rule 17 (EXP)


state 21

   30 FCALL: OP_OP IDENTIFIER . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 44
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 22

   18 ARITHMETIC_EXP: OP_OP OP_PLUS . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 45
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 23

   19 ARITHMETIC_EXP: OP_OP OP_MINUS . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 46
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 24

   20 ARITHMETIC_EXP: OP_OP OP_MULT . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 47
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 25

   21 ARITHMETIC_EXP: OP_OP OP_DIV . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 48
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 26

   29 ASSIGNMENT: OP_OP KW_SET . IDENTIFIER EXP OP_CP

    IDENTIFIER  shift, and go to state 49


state 27

   31 FUNCTION_DEF: OP_OP KW_DEFFUN . IDENTIFIER OP_OP IDENTIFIER OP_CP EXP OP_CP

    IDENTIFIER  shift, and go to state 50


state 28

   32 CONTROL_STATEMENT: OP_OP KW_IF . EXP EXP OP_CP
   33                  | OP_OP KW_IF . EXP EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 51
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 29

   34 CONTROL_STATEMENT: OP_OP KW_WHILE . OP_OP EXP OP_CP EXP OP_CP

    OP_OP  shift, and go to state 52


state 30

   35 CONTROL_STATEMENT: OP_OP KW_FOR . OP_OP IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP

    OP_OP  shift, and go to state 53


state 31

   39 LIST: OP_OP KW_LIST . OP_CP
   40     | OP_OP KW_LIST . OP_OP VALUES OP_CP OP_CP

    OP_OP  shift, and go to state 54
    OP_CP  shift, and go to state 55


state 32

   37 EXIT: OP_OP KW_EXIT . OP_CP

    OP_CP  shift, and go to state 56


state 33

   41 LIST: OP_OP KW_APPEND . LIST EXP OP_CP

    OP_OP   shift, and go to state 57
    KW_NIL  shift, and go to state 6

    LIST  go to state 58


state 34

   42 LIST: OP_OP KW_CONCAT . LIST LIST OP_CP

    OP_OP   shift, and go to state 57
    KW_NIL  shift, and go to state 6

    LIST  go to state 59


state 35

   36 DISPLAY: OP_OP KW_DISP . EXPLIST OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXPLIST            go to state 60
    EXP                go to state 10
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 36

   45 LOAD: OP_OP KW_LOAD . IDENTIFIER OP_CP

    IDENTIFIER  shift, and go to state 61


state 37

   24 LOGICAL_EXP: OP_OP KW_AND . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 62
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 38

   25 LOGICAL_EXP: OP_OP KW_OR . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 63
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 39

   26 LOGICAL_EXP: OP_OP KW_NOT . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 64
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 40

   27 LOGICAL_EXP: OP_OP KW_EQUAL . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 65
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 41

   28 LOGICAL_EXP: OP_OP KW_LESS . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 66
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 42

    0 $accept: START $end .

    $default  accept


state 43

    4 EXPLIST: EXPLIST EXP .

    $default  reduce using rule 4 (EXPLIST)


state 44

   30 FCALL: OP_OP IDENTIFIER EXP . OP_CP

    OP_CP  shift, and go to state 67


state 45

   18 ARITHMETIC_EXP: OP_OP OP_PLUS EXP . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 68
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 46

   19 ARITHMETIC_EXP: OP_OP OP_MINUS EXP . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 69
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 47

   20 ARITHMETIC_EXP: OP_OP OP_MULT EXP . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 70
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 48

   21 ARITHMETIC_EXP: OP_OP OP_DIV EXP . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 71
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 49

   29 ASSIGNMENT: OP_OP KW_SET IDENTIFIER . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 72
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 50

   31 FUNCTION_DEF: OP_OP KW_DEFFUN IDENTIFIER . OP_OP IDENTIFIER OP_CP EXP OP_CP

    OP_OP  shift, and go to state 73


state 51

   32 CONTROL_STATEMENT: OP_OP KW_IF EXP . EXP OP_CP
   33                  | OP_OP KW_IF EXP . EXP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 74
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 52

   34 CONTROL_STATEMENT: OP_OP KW_WHILE OP_OP . EXP OP_CP EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6

    EXP                go to state 75
    ARITHMETIC_EXP     go to state 11
    LOGICAL_EXP        go to state 12
    ASSIGNMENT         go to state 13
    FCALL              go to state 14
    FUNCTION_DEF       go to state 15
    CONTROL_STATEMENT  go to state 16
    DISPLAY            go to state 17
    EXIT               go to state 18
    LIST               go to state 19
    LOAD               go to state 20


state 53

   35 CONTROL_STATEMENT: OP_OP KW_FOR OP_OP . IDENTIFIER EXP EXP OP_CP EXPLIST OP_CP

    IDENTIFIER  shift, and go to state 76


state 54

   40 LIST: OP_OP KW_LIST OP_OP . VALUES OP_CP OP_CP

    VALUEF  shift, and go to state 77

    VALUES  go to state 78


state 55

   39 LIST: OP_OP KW_LIST OP_CP .

    $default  reduce using rule 39 (LIST)


state 56

   37 EXIT: OP_OP KW_EXIT OP_CP .

    $default  reduce using rule 37 (EXIT)


state 57

   39 LIST: OP_OP . KW_LIST OP_CP
   40     | OP_OP . KW_LIST OP_OP VALUES OP_CP OP_CP
   41     | OP_OP . KW_APPEND LIST EXP OP_CP
   42     | OP_OP . KW_CONCAT LIST LIST OP_CP

    KW_LIST    shift, and go to state 31
    KW_APPEND  shift, and go to state 33
    KW_CONCAT  shift, and go to state 34


state 58

   41 LIST: OP_OP KW_APPEND LIST . EXP OP_CP

    VALUEF      shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    OP_OP       shift, and go to state 3
    KW_TRUE     shift, and go to state 4
    KW_FALSE    shift, and go to state 5
    KW_NIL      shift, and go to state 6
